# proj1

./: .gitignore.save  README.md  launch
install/: local_setup.sh  (+1 more)
src/aqua_robot_gazebo/: CMakeLists.txt
src/aqua_robot_gazebo/launch/: lake_simulation.launch.py  lake_simulation.launch.py.save  multi_robot_safe.launch.py  spawn_robot.launch.py
src/aqua_robot_gazebo/models/apriltag_36h11_00000/: model.config  model.sdf
src/aqua_robot_gazebo/models/apriltag_36h11_00001/: model.config  model.sdf
src/aqua_robot_gazebo/models/apriltag_36h11_00001/materials/scripts/: apriltag.material
src/aqua_robot_gazebo/models/apriltag_36h11_00002/: model.config
src/aqua_robot_gazebo/models/apriltag_36h11_00003/: model.config  model.sdf
src/aqua_robot_gazebo/models/apriltag_36h11_00003/materials/scripts/: apriltag.material
src/aqua_robot_gazebo/models/apriltag_36h11_00004/: model.config  model.sdf
src/aqua_robot_gazebo/urdf/: aqua_robot.urdf  aqua_robot_multi.urdf.xacro
src/aqua_robot_gazebo/worlds/: lake_waste.world  lake_waste.world.save
src/asv_fleet/: CMakeLists.txt  README.md
src/asv_fleet/config/: tags.yaml
src/asv_fleet/launch/: apriltag_detection.launch.py  fleet_autonomy.launch.py  spawn_fleet.launch.py  spawn_fleet.launch.py.save  spawn_single_asv.launch.py
src/asv_fleet/models/apriltag_0/: model.config  model.sdf
src/asv_fleet/models/apriltag_1/: model.config  model.sdf
src/asv_fleet/models/apriltag_2/: model.config  model.sdf
src/asv_fleet/scripts/: waste_seek_node.py
src/asv_fleet/urdf/: asv_macro.xacro  asv_robot.xacro
src/asv_fleet/worlds/: lake_world.world
(+138 files in other folders)
